Fixed image size on smaller screens

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   transform: translateX(-50%);
   z-index: 1;
   /* width: 100%; */
-  height: 600px;
+  height: 400px;
   margin: 0 auto;
   bottom: 0;
   /* max-width: 100%; */
